[gd_scene load_steps=6 format=3 uid="uid://jhimstp4qc1c"]

[ext_resource type="Script" path="res://src/player/scripts/Player.gd" id="1_8hbfk"]
[ext_resource type="PackedScene" uid="uid://bxkd03q8nejpt" path="res://src/player/scenes/PlayerBody.tscn" id="2_wf6be"]

[sub_resource type="BoxShape3D" id="BoxShape3D_e5qoq"]
size = Vector3(0.25, 0.65, 0.25)

[sub_resource type="BoxShape3D" id="BoxShape3D_0l4df"]
size = Vector3(0.6, 0.5, 0.75)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bqcmh"]
height = 0.5

[node name="Player" type="CharacterBody3D"]
collision_mask = 2
script = ExtResource("1_8hbfk")

[node name="PlayerCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.325, 0)
shape = SubResource("BoxShape3D_e5qoq")

[node name="PlayerBody" parent="." instance=ExtResource("2_wf6be")]

[node name="DamageArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0020135, 0, -0.294568)
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, -0.0819001)
shape = SubResource("BoxShape3D_0l4df")

[node name="CollectionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollectionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
shape = SubResource("CylinderShape3D_bqcmh")
